force-app/main/default/objects/Look_Book__c/Look_Book__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is used to put custom URL Links on specific Accounts</description>
    <label>Look Book</label>
</CustomObject>