force-app/main/default/objects/Look_Book__c/fields/Addnl_Asset_Label__c.field-meta.xml
<CustomField>
    <fullName>Addnl_Asset_Label__c</fullName>
    <description>This field is used to entering Additional Asset Label</description>
    <label>Addnl Asset Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>