force-app/main/default/objects/Look_Book__c/fields/Addnl_Asset_URL__c.field-meta.xml
<CustomField>
    <fullName>Addnl_Asset_URL__c</fullName>
    <description>This field is used for storing addtnl Assets URL</description>
    <label>Addnl Asset URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>