force-app/main/default/objects/Look_Book__c/fields/Asset_Label__c.field-meta.xml
<CustomField>
    <fullName>Asset_Label__c</fullName>
    <description>This field is used for putting label for the link</description>
    <label>Asset Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>