force-app/main/default/objects/Look_Book__c/fields/Asset_URL__c.field-meta.xml
<CustomField>
    <fullName>Asset_URL__c</fullName>
    <description>This field is used to put URL for the Page</description>
    <label>Asset URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>