force-app/main/default/objects/Look_Book__c/listViews/Detail_View.listView-meta.xml
<ListView>
    <fullName>Detail_View</fullName>
    <columns>NAME</columns>
    <columns>Asset_Label__c</columns>
    <columns>Asset_URL__c</columns>
    <columns>Addnl_Asset_Label__c</columns>
    <columns>Addnl_Asset_URL__c</columns>
    <columns>SETUP_OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Detail View</label>
    <sharedTo>
        <group>Sales_Management</group>
    </sharedTo>
</ListView>